[package]
name = "album-tracker"
version = "0.1.0"
authors = ["TBD"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magick_rust = "0.14.0"
base64 = "0.13.0"
reqwest = "0.11.0"
serde_json = "1.0"
futures = "0.3.8"
tokio = { version = "1", features = ["full"] }
